# Module.Sockets

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: CMakeLists.txt  Configure.cmake
Sockets/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Connection.h  ExitSignal.cpp  ExitSignal.h  PlatformSocket.cpp  PlatformSocket.h  ServerSocket.cpp  ServerSocket.h  ServerThread.cpp  ServerThread.h  Socket.cpp  Socket.h  SocketStream.cpp  SocketStream.h
Test/: CMakeLists.txt  Test1.cpp
